# django-oemof

./: .bumpversion.toml  .flake8  .gitignore  .jshintrc  .pylintrc  CHANGELOG.md  README.md  environment.yml  pyproject.toml  runtests.py  standalone.py
django_oemof/: __init__.py  apps.py  hooks.py  models.py  results.py  settings.py  simulation.py  standalone.py  urls.py  views.py
django_oemof/management/commands/: add_static_results.py
django_oemof/migrations/: 0001_initial.py  0002_simulation.py  0003_result.py  0004_alter_simulation_dataset.py  0005_alter_result_name.py  0006_oemofdataset_meta_results.py
django_oemof/static/django_oemof/js/: simulation.js
django_oemof/templates/django_oemof/: flows.html
django_oemof/tests/: settings.py  test_hooks.py  test_oemof_db.py  test_oemof_parameters.py  test_postprocessing.py
django_oemof/tests/test_data/oemof/dispatch/data/elements/: volatile.csv
django_oemof/tests/test_data/oemof/test_scenario/: datapackage.json
django_oemof/tests/test_data/oemof/test_scenario/data/elements/: biomass-demand.csv  ch4-boiler_large.csv  ch4-boiler_small.csv  ch4-bpchp_small.csv  ch4-demand.csv  ch4-extchp_large.csv  electricity-bev_charging.csv  electricity-heatpump_small.csv  electricity-import.csv  electricity-large_scale_battery.csv  heat_central-storage.csv  heat_decentral-demand.csv  lignite-demand.csv  lignite-oven.csv  solar-pv_ground.csv  solar-pv_rooftop.csv  solar-thermalcollector.csv  wind-onshore.csv  wood-oven.csv
django_oemof/tests/test_data/oemof_static/status_quo/: co2.csv  datapackage.json  flows.csv
django_oemof/tests/test_data/test_scenario/: additional_scalars.csv  datapackage.json
django_oemof/tests/test_data/test_scenario/data/elements/: biomass-fermenter.csv  ch4-gt.csv  electricity-demand.csv  electricity-export.csv  electricity-heatpump_large.csv  electricity-pth_large.csv  electricity-pth_small.csv  heat_central-demand.csv  heat_decentral-storage.csv  wood-demand.csv
docs/images/: oemof_flow.graphml
tests/: test_something.py
