[tool.poetry]
name = "django-oemof"
version = "0.21.0"
description = "Django application to run oemof"
authors = ["Hendrik Huyskens <hendrik.huyskens@rl-institut.de>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "django_oemof"}]

[tool.poetry.dependencies]
python = "^3.9"
django-environ = ">0.10.0"  # https://github.com/joke2k/django-environ
djangorestframework = "^3.14.0"
celery = "^5.1.2"
pandas = ">2.0"
numpy = "<2.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^21.12b0"
flake8 = "^5.0.4"
pylint = "^2.15.2"
mypy = "^0.990"
Django = "^3.2.3"
psycopg2-binary = "^2.9.5"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = ["django_oemof/migrations/*"]
